...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_margin="10dp"
        android:elevation="4dp">

...
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="5dp">
                <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/title_movie"
                    android:textStyle="bold"
...
