...
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:background="@color/colorLoad"/>
                    <TextView
                        android:id="@+id/tvTitleDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        android:textSize="30sp"
                        android:textStyle="bold"
...
                            android:text="@string/release_date_label"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvReleaseDateDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="Release_Date"
                            android:textAlignment="viewStart"/>

...
